--- a/.github/workflows/publish_pypi.yml
+++ b/.github/workflows/publish_pypi.yml
@@ -18,8 +18,8 @@ jobs:
             enable-cache: true
             cache-dependency-glob: uv.lock
 
-        - name: Sync package
-          run: uv sync
+        - name: Set up Python
+          run: uv python install 3.13
 
         - name: Build
           run: uv build
