--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ version = "0.3.0"
 description = "Library for building your own htop from scratch, using python"
 readme = "README.md"
 authors = [
-    { name = "Oriol Agost Batalla", email = "github@agost.info" },
+    { name = "Oriol Agost Batalla", email = "oriol@agost.info" },
     { name = "Pablo Fraile Alonso", email = "pablo@pablofraile.net" },
     { name = "Ferran Aran Domingo", email = "ferran@aranferran.com" }
 ]
@@ -14,11 +14,27 @@ dependencies = [
     "textual>=5.3.0",
 ]
 
+
+[tool.ruff]
+# Match Black’s defaults
+line-length = 88
+target-version = "py313"
+
+[tool.ruff.lint]
+select = [
+    "E",   # pycodestyle (style errors)
+    "F",   # pyflakes (logic errors, unused vars, imports)
+    "B",   # flake8-bugbear (common bugs/pitfalls)
+    "I",   # isort (import sorting)
+]
+
+ignore = [
+    "E501",  # line length (let Black handle wrapping)
+]
+
 [build-system]
 requires = ["uv_build>=0.8.13,<0.9.0"]
 build-backend = "uv_build"
 
 [dependency-groups]
-dev = [
-    "ruff>=0.12.10",
-]
+dev = []
